1688Admin : file structure finished

--- a/src/apps/1688Admin/components/login/index.pug
+++ b/src/apps/1688Admin/components/login/index.pug
@@ -1,6 +1,6 @@
 .login-content
     .login-logo
-        img(src=IMG_DIR + 'logo.png')
+        img(src=IMG_DIR + 'logo-white.png')
     form#form_login.login-box(action="?" name="loginform")
         .row
             .col-xs-12
