--- a/src/apps/1688Admin/components/login/index.styl
+++ b/src/apps/1688Admin/components/login/index.styl
@@ -17,7 +17,7 @@ LOGIN_BTN_FSIZE = 0.18rem
     right 0
     bottom 0
     left 0
-    background-image url(IMG_DIR + 'bg-login.jpg')
+    background-image url(IMG_DIR + 'bg.png')
     background-color GRAY_D6
     background-repeat no-repeat
     background-size cover
