--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -108,7 +108,7 @@ body
         top TOP_HEIGHT_MOBILE  
         left 0
     .mt-space
-        margin-top INDEX_SPACE_MOBILE
+        margin-top 1.5*INDEX_SPACE_MOBILE
             
 .iscroller {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
