--- a/src/apps/1688Admin/components/topbar/index-main.pug
+++ b/src/apps/1688Admin/components/topbar/index-main.pug
@@ -3,15 +3,16 @@
         img(src=IMG_DIR + 'logo-white.png')
         span 双创智慧园区后台管理系统
     .right-shoulder
-        a.btn.btn-large.btn-topbar.pull-left(href="javascript:;")
-            i.fa.fa-home
-            |&nbsp;门户首页
         .dropdown.pull-left
             .btn.btn-large.btn-topbar#topbar_menu_btn(data-toggle="dropdown" aria-haspopup="true" aria-expanded="true")
                 i.fa.fa-user-circle-o
                 |&nbsp;Admin&nbsp;
                 i.fa.fa-angle-down
             ul.popmenu-box.popbox-content.dropdown-menu(aria-labelledby="dm_dropdown")
+                li
+                    a.btn.btn-popmenu(href="index-oa.html#oa-personal-info.html" target="_blank")
+                        i.fa.fa-user-circle-o
+                        |&nbsp;个人信息
                 li
                     a.btn.btn-popmenu(href="login.html") 
                         i.fa.fa-sign-out
